syntax="proto3";
 
package proto;
 
option go_package = "github.com/provider-grpc-server";
 
 
message CreateListReq {
   string name = 1;
   string description = 2;
}
 
message CreateListResp {
   string status = 1;
}

message UpdateListItemsReq {
    string name = 1;
    repeated int32 new_items = 2;
}
  
message UpdateListItemsResp {
   string status = 1;
}

message DeleteListReq {
   string name = 1;
}
 
message DeleteListResp {
   string status = 1;
}

message GetListReq {
   string name = 1;
}
 
message GetListResp {
   string status = 1;
   repeated int32 items = 2;
}
 
service ListService {
   rpc CreateList(CreateListReq) returns (CreateListResp) {}
   rpc GetList(GetListReq) returns (GetListResp) {}
   rpc UpdateListItems(UpdateListItemsReq) returns (UpdateListItemsResp) {}
   rpc DeleteList(DeleteListReq) returns (DeleteListResp) {}
}